hw4: Refactor methods of class AnimalHelper to use toList collector